Project

General

Profile

Actions

Bug #42598

closed

unittest_journal failure during make check

Added by Sage Weil over 4 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

   -14> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 22
   -13> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 23
   -12> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep reusing last freed id 23
   -11> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep reusing last freed id 20
   -10> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep reusing last freed id 15
    -9> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 16
    -8> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 17
    -7> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 19
    -6> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 20
    -5> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep reusing last freed id 20
    -4> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 22
    -3> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep using id 23
    -2> 2019-11-01T23:04:42.107+0000 ffff9ff325e0  1 lockdep reusing last freed id 23
    -1> 2019-11-01T23:04:42.137+0000 ffff9ff325e0 -1 /home/jenkins-build/build/workspace/ceph-pull-requests-arm64/src/common/mutex_debug.h: In function 'ceph::mutex_debug_detail::mutex_debug_impl<<anonymous> >::~mutex_debug_impl() [with bool Recursive = false]' thread ffff9ff325e0 time 2019-11-01T23:04:42.120138+0000
/home/jenkins-build/build/workspace/ceph-pull-requests-arm64/src/common/mutex_debug.h: 111: FAILED ceph_assert(r == 0)

 ceph version Development (no_version) octopus (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x150) [0xffffa216a9a8]
 2: (()+0x144aba4) [0xffffa216aba4]
 3: (ceph::mutex_debug_detail::mutex_debug_impl<false>::~mutex_debug_impl()+0x34) [0x6897c4]
 4: (TestObjectRecorder::Handler::~Handler()+0x34) [0x7308f8]
 5: (TestObjectRecorder::ObjectRecorderFlusher::~ObjectRecorderFlusher()+0x110) [0x72cf24]
 6: (TestObjectRecorder_AppendFilledObject_Test::TestBody()+0x968) [0x72752c]
 7: (void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*)+0x64) [0x766ce0]
 8: (void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*)+0x50) [0x7600a0]
 9: (testing::Test::Run()+0xfc) [0x73ebe0]
 10: (testing::TestInfo::Run()+0x10c) [0x73f4d8]
 11: (testing::TestSuite::Run()+0x114) [0x73fbd0]
 12: (testing::internal::UnitTestImpl::RunAllTests()+0x3dc) [0x74a790]
 13: (bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*)+0x64) [0x767f78]
 14: (bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*)+0x50) [0x761148]
 15: (testing::UnitTest::Run()+0xbc) [0x7491e8]
 16: (RUN_ALL_TESTS()+0x10) [0x678784]
 17: (main()+0xf8) [0x6782a0]
 18: (__libc_start_main()+0xf0) [0xffffa05b0d64]
 19: /home/jenkins-build/build/workspace/ceph-pull-requests-arm64/build/bin/unittest_journal() [0x6780bc]


https://jenkins.ceph.com/job/ceph-pull-requests-arm64/9724/consoleFull#-332497497fa9a7a-7d42-44ad-9e67-a27db6b3fb12

arm64 builder in this case, but i don't think this is arch related


Related issues 4 (0 open4 closed)

Related to rbd - Bug #51100: object_recorder->is_closed() assert failure in JournalRecorder::open_object_set() in nautilusWon't Fix - EOL

Actions
Copied to rbd - Backport #42952: luminous: unittest_journal failure during make checkRejectedActions
Copied to rbd - Backport #42953: nautilus: unittest_journal failure during make checkRejectedMykola GolubActions
Copied to rbd - Backport #42954: mimic: unittest_journal failure during make checkRejectedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Status changed from 12 to Fix Under Review
  • Backport set to luminous,mimic,nautilus
  • Pull request ID set to 31392

Related to changes implemented in issue #40072

Actions #2

Updated by Mykola Golub over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42952: luminous: unittest_journal failure during make check added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42953: nautilus: unittest_journal failure during make check added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42954: mimic: unittest_journal failure during make check added
Actions #6

Updated by Ilya Dryomov almost 3 years ago

  • Related to Bug #51100: object_recorder->is_closed() assert failure in JournalRecorder::open_object_set() in nautilus added
Actions #7

Updated by Ilya Dryomov about 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF