journal: fix flush by age and in-flight byte tracking

The flush by age was always causing an immediate flush due to a
backwards comparison. Additionally, the in-flight byte tracker was
never decremented which caused premature closure of the journal
object.

Finally, there was a potential race condition between closing the
object and in-flight notification callbacks executing. Now we keep
the lock held for both closed and overflow callbacks to prevent
the small chance of a race.

Fixes: https://tracker.ceph.com/issues/42598
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit e536b5c8e10e152ef07fc5ee5bb019cea359d249)

Conflicts:
	src/journal/ObjectRecorder.cc: missing ceph::ref_t backport
	src/journal/ObjectRecorder.h: missing ceph::ref_t backport
	src/test/journal/test_ObjectRecorder.cc: missing ceph::ref_t backport